# MyWebServer

./: .gitignore  .gitmodules  CMakeLists.txt  DOC.md  README.md  index.html  test.html
demo/: demo_db.cpp  demo_db.h  demo_main.cpp  demo_message.cpp  demo_message.h  demo_routes.cpp  demo_routes.h  demo_util.cpp  demo_util.h  example.cpp  getmessage.hpp  index.html  login.hpp  message.h  stdiomanager.hpp  users.h
header/: StringCrypto.h  clientFile.hpp  code_generater.hpp  corutine.hpp  debug.hpp  file.h  format.h  forworder.h  http.h  http.hpp  httpClient.h  httpClientFile.h  httpMessage.h  httpServerFile.h  httpfile.h  io_context.h  json.hpp  json_sql.hpp  log.hpp  main.hpp  mysqlHandle.h  mysqlResult.h  mysqlStatement.h  object_tree.hpp  platform.h  port_fd.h  protocol_constants.h  reflection.h  reflection.hpp  reflection_macros.hpp  reflection_macros.py  reflection_self.hpp  reflection_ylt.hpp  serverFile.h  signal_slots.hpp  threadpool.hpp  webSocketClient.h  webSocketClientFile.hpp  webSocketFile.h  webSocketMessage.h  (+1 more)
src/: clientFile.cpp  file.cpp  format.cpp  forworder.cpp  http.cpp  httpClientFile.cpp  httpMessage.cpp  httpServerFile.cpp  httpfile.cpp  htttpClient.cpp  io_context.cpp  main.cpp  mysqlHandle.cpp  mysqlResult.cpp  mysqlStatement.cpp  serverFile.cpp  webSocketClient.cpp  webSocketClientFile.cpp  webSocketFile.cpp  webSocketMessage.cpp  webSocketServerFile.cpp
static/: app.js  index.html  style.css
